--- a/exercises/exercise09/index.html
+++ b/exercises/exercise09/index.html
@@ -3,14 +3,8 @@
 
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
-  <script src="..\libraries\p5.min.js"></script>
-  <script src="..\libraries\p5.gui.js"></script>
-  <script src="..\libraries\quicksettings.js"></script>
-
-  <script src="Wind.js" type="text/javascript"></script>
-  <script src="Emitter.js" type="text/javascript"></script>
-  <script src="Bird.js" type="text/javascript"></script>
-  <script src="Pipe.js" type="text/javascript"></script>
+  <script src="..\..\libraries\p5.min.js"></script>
+  <script src="Ship.js" type="text/javascript"></script>
   <script src="sketch.js" type="text/javascript"></script>
     <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
@@ -24,8 +18,8 @@
 </head>
 
 <body>
-  <h1>Creative Coding 1: Jump Bird!</h1>
-  <h2>Alanna Soepler</h2>
+  <h1>Creative Coding 1: Ship</h1>
+  <h2>Student Name</h2>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <a href= "../index.html">Exercises</a>
