--- a/index.html
+++ b/index.html
@@ -1,17 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Coding Part 1</title>
-</head>
-<body>
-    <div>
-        <a href="/project/index.html">Project</a>
-        <a href="/exercises/ballCollide/index.html">Balls Collide</a>
-        <a href="/exercises/bigArrow/index.html">Big Arrow</a>
-        <a href="/exercises/eyes/index.html">The Eyes</a>
-      </div>
+  <title>CCoding 1: Project and Exercises</title>
+  <meta charset="UTF-8">
+
+  <!-- This line removes any default padding and style.
+       You might only need one of these values set. -->
+  <style>
+        body { padding:10; margin:10; background-color: rgb(131, 131, 131);}
+        main { background-color: rgb(65, 65, 65)} 
+  </style>
+  </head>
+
+  <body>
+  <h1>Creative Coding 1: Exercises & Project</h1>
+  <h2>Alanna Soepler</h2>
+    <ul>
+      <li><a href= "project/index.html">Project</a></li>
+      <li><a href= "exercises/index.html">Exercises</a></li>
+    </ul>
+    <br />
+    <hr />
+    <br />
+
 </body>
 </html>
